--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -11,6 +11,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.2em;
   background: #f1f1f1;
+  -webkit-font-smoothing: antialiased;
 }
 a {
   color: #999;
@@ -24,7 +25,9 @@ $colors: (
 
   "light": #f9f9f9,
 
-  "grey": #999,
+  "grey-666": #666,
+
+  "grey-999": #999,
 
   "black-343440": #343440,
 
@@ -52,6 +55,7 @@ $colors: (
 // font-size
 $base-font-size: 1rem;
 $font-sizes: (
+  xxs: 0.615 /* 8/13 */,
   xs: 0.769  /* 10/13 */,
   sm: 0.923  /* 12/13 */,
   md: 1      /* 13/13 */,
@@ -162,3 +166,22 @@ $spacing-sizes: (
     }
   }
 };
+
+// button
+.btn {
+  border: none;
+  border-radius: 0.154rem  /* 2/13 */;
+  font-size: map-get($font-sizes, 'sm') * $base-font-size;
+  padding: .3rem .6rem;
+}
+
+// nav
+.nav {
+  .nav-item {
+    border-bottom: 3px solid transparent;
+    padding-bottom: .2rem;
+    &.active {
+      border-bottom: 3px solid #fff;
+    }
+  }
+}
