--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -1,3 +1,5 @@
+@import './varables.scss';
+
 // reset
 * {
   box-sizing: border-box;
@@ -18,24 +20,6 @@ a {
 }
 
 // colors
-$colors: (
-  "primary": #db9e3f,
-
-  "white": #fff,
-
-  "light": #f9f9f9,
-
-  "grey-666": #666,
-
-  "grey-999": #999,
-
-  "black-343440": #343440,
-
-  "black-222": #222,
-
-  "black": #000,
-);
-
 @each $colorKey, $color in $colors {
   .text-#{$colorKey} {
     color: $color;
@@ -48,26 +32,24 @@ $colors: (
 // text
 @each $val in (left, center, right) {
   .text-#{$val} {
-    text-align: $val;
+    text-align: $val !important;
   }
 };
 
 // font-size
-$base-font-size: 1rem;
-$font-sizes: (
-  xxs: 0.615 /* 8/13 */,
-  xs: 0.769  /* 10/13 */,
-  sm: 0.923  /* 12/13 */,
-  md: 1      /* 13/13 */,
-  lg: 1.077  /* 14/13 */,
-  xl: 1.231  /* 16/13 */,
-);
-
 @each $sizeKey, $size in $font-sizes {
   .fs-#{$sizeKey} {
     font-size: $size * $base-font-size;
   }
 };
+
+// width, height
+.w-100 {
+  width: 100%;
+}
+.h-100 {
+  height: 100%;
+}
 
 // flex
 .d-flex {
@@ -84,14 +66,6 @@ $font-sizes: (
 }
 
 // justify-contnet
-$flex-jc: (
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  between: space-between,
-  around: space-around,
-);
-
 @each $key, $value in $flex-jc {
   .jc-#{$key} {
     justify-content: $value;
@@ -99,40 +73,14 @@ $flex-jc: (
 };
 
 // align-items
-$flex-ai: (
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  stretch: stretch,
-);
-
 @each $key, $value in $flex-ai {
   .ai-#{$key} {
     align-items: $value;
   }
 };
 
-// spacing
-$spacing-types: (
-  m: margin,
-  p: padding,
-);
-$spacing-directions: (
-  t: top,
-  r: right,
-  b: bottom,
-  l: left,
-);
-$base-spacing-size: 1rem;
-$spacing-sizes: (
-  0: 0,
-  1: .25,
-  2: .5,
-  3: 1,
-  4: 1.5,
-  5: 3,
-);
 
+// spacing
 @each $typeKey, $type in $spacing-types {
   // .m-1
   @each $sizeKey, $size in $spacing-sizes {
