新闻资讯获取数据、渲染完成

--- a/web/src/assets/scss/style.css
+++ b/web/src/assets/scss/style.css
@@ -102,6 +102,12 @@ a {
 .fs-xl {
   font-size: 1.231rem; }
 
+.text-ellipsis {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
 .w-100 {
   width: 100%; }
 
