--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -18,6 +18,9 @@ body {
 a {
   color: #999;
 }
+p {
+  line-height: 1.5em;
+}
 
 // colors
 @each $colorKey, $color in $colors {
@@ -172,5 +175,12 @@ a {
     width: 0.769rem  /* 10/13 */;
     height: 0.769rem  /* 10/13 */;
     background-position: 38.577% 52.076%;
+  }
+}
+
+// borders
+@each $dir in (top, right, bottom, left) {
+  .border-#{$dir} {
+    border-#{$dir}: 1px solid $border-color;
   }
 }
