英雄详情页 - 顶部详情完成

--- a/web/src/assets/scss/_varables.scss
+++ b/web/src/assets/scss/_varables.scss
@@ -2,9 +2,15 @@
 $colors: (
   "primary": #db9e3f,
 
+  "primary-805302": #805302,
+
   "info": #4b67af,
 
-  "blur": #4394e4,
+  "danger-791a16": #791a16,
+
+  "blue": #4394e4,
+
+  "blue-203696": #203696,
 
   "white": #fff,
 
@@ -15,6 +21,8 @@ $colors: (
   "grey-666": #666,
 
   "grey-999": #999,
+
+  "dark-33332c": #33332c,
 
   "black-343440": #343440,
 
