--- a/web/src/assets/scss/_varables.scss
+++ b/web/src/assets/scss/_varables.scss
@@ -14,6 +14,10 @@ $colors: (
 
   "white": #fff,
 
+  "white-fcfcfc": #fcfcfc,
+
+  "white-eceef0": #eceef0,
+
   "light": #f9f9f9,
 
   "light-d4d9de": #d4d9de,
